Center align portfolio images on small screens

--- a/css/style.css
+++ b/css/style.css
@@ -119,3 +119,9 @@ nav {
     border-bottom-color: rgba(255, 255, 255, .5) !important;
 }
 
+@media (max-width: 767px) {
+    #portfolio img {
+        margin: 0 auto;
+    }
+}
+
